# invoice

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/src/: db.sqlite3
backend/src/config/: settings.py  urls.py
backend/src/invoice/domain/: exceptions.py  invoice.py  invoice_item.py
backend/src/invoice/dto/: invoice_create_dto.py  invoice_item_dto.py  invoice_response_dto.py  invoice_update_dto.py
backend/src/invoice/handler/: urls.py  views.py
backend/src/invoice/infrastructure/: models.py
backend/src/invoice/migrations/: 0001_initial.py
backend/src/invoice/repository/: interfaces.py  postgres_repository.py
backend/src/invoice/service/: invoice_service.py
backend/src/shared/http/: responses.py
frontend/: .env.example  Dockerfile  README.md  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/invoices/: columns.tsx  page.tsx
frontend/app/sign-in/[[...sign-in]]/: page.tsx
frontend/components/: app-sidebar.tsx  dashboard-layout.tsx  invoice-form.tsx  invoice-pdf-button.tsx  invoice-viewer.tsx  pdf-viewer.tsx
frontend/components/invoices/: columns.tsx  invoice-document.tsx  invoice-form.tsx  invoice-pdf-button.tsx
frontend/components/shared/: pdf-viewer.tsx
frontend/components/ui/: data-table.tsx
frontend/hooks/: use-invoices.ts
frontend/lib/: api.ts
frontend/lib/types/: index.ts  invoice.ts
